<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#EDEDED"
    tools:context=".MakeOrderActivity">

    <TextView
        android:id="@+id/greeting_user"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:fontFamily="@font/raleway_medium"
        android:padding="12dp"
        android:text="@string/greeting_user_make_order_activity"
        android:textAlignment="center"
        android:textColor="#3E2723"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/radio_group_drinks"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/radio_group_drinks"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/additives_textView"
        app:layout_constraintTop_toBottomOf="@+id/greeting_user">

        <RadioButton
            android:id="@+id/radio_button_tea"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:fontFamily="@font/alatsi"
            android:text="@string/radio_button_text_tea"
            android:textSize="18sp" />

        <RadioButton
            android:id="@+id/radio_button_coffee"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:fontFamily="@font/alatsi"
            android:text="@string/radio_button_text_coffee"
            android:textSize="18sp" />
    </RadioGroup>


    <TextView
        android:id="@+id/additives_textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:fontFamily="@font/raleway_medium"
        android:padding="12dp"
        android:text="@string/additives"
        android:textAlignment="center"
        android:textColor="#3E2723 "
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/check_box_milk"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radio_group_drinks" />


    <CheckBox
        android:id="@+id/check_box_milk"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/alatsi"
        android:text="@string/check_box_milk"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        app:flow_horizontalBias="0.5"
        app:layout_constraintBottom_toTopOf="@+id/drink_type_textView"
        app:layout_constraintEnd_toStartOf="@+id/check_box_lemon"
        app:layout_constraintStart_toEndOf="@+id/check_box_sugar"
        app:layout_constraintTop_toBottomOf="@+id/additives_textView" />

    <CheckBox
        android:id="@+id/check_box_sugar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/alatsi"
        android:text="@string/check_box_sugar"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/check_box_milk"
        app:layout_constraintEnd_toStartOf="@+id/check_box_milk"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/check_box_milk"
        app:layout_constraintVertical_bias="1.0" />

    <CheckBox
        android:id="@+id/check_box_lemon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/alatsi"
        android:text="@string/check_box_lemon"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@id/check_box_milk"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/check_box_milk"
        app:layout_constraintTop_toTopOf="@+id/check_box_milk"
        app:layout_constraintVertical_bias="1.0" />


    <TextView
        android:id="@+id/drink_type_textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:fontFamily="@font/raleway_medium"
        android:padding="10dp"
        android:text="@string/choose_drink_type"
        android:textAlignment="center"
        android:textColor="#3E2723 "
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/spinner_tea"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/check_box_milk" />


    <Spinner
        android:id="@+id/spinner_tea"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:entries="@array/types_of_tea"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/make_order_button"
        app:layout_constraintTop_toBottomOf="@+id/drink_type_textView" />

    <Spinner
        android:id="@+id/spinner_coffee"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:entries="@array/types_of_coffee"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/make_order_button"
        app:layout_constraintTop_toBottomOf="@+id/drink_type_textView"
        tools:visibility="visible" />

    <Button
        android:id="@+id/make_order_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:fontFamily="@font/alatsi"
        android:text="@string/make_order_button"
        android:textColor="@android:color/white"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinner_tea"
        tools:layout_editor_absoluteX="8dp" />
</androidx.constraintlayout.widget.ConstraintLayout>